--- a/package.json
+++ b/package.json
@@ -25,12 +25,11 @@
     "dependencies": {
         "bootstrap": "^5.2.0-beta1",
         "datatables.net": "^1.12.1",
-        "datatables.net-bs4": "^1.12.1",
         "datatables.net-buttons": "^2.2.3",
-        "datatables.net-buttons-bs4": "^2.2.3",
         "datatables.net-buttons-bs5": "^2.2.3",
         "datatables.net-responsive-bs5": "^2.3.0",
         "datatables.net-select-bs5": "^1.4.0",
-        "jquery": "^3.6.0"
+        "jquery": "^3.6.0",
+        "jquery.easing": "^1.4.1"
     }
 }
