--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
         "datatables.net-responsive-bs5": "^2.3.0",
         "datatables.net-select-bs5": "^1.4.0",
         "jquery": "^3.6.0",
-        "jquery.easing": "^1.4.1"
+        "jquery.easing": "^1.4.1",
+        "select2": "^4.1.0-rc.0",
+        "select2-bootstrap-5-theme": "^1.3.0"
     }
 }
